# moderncpp

./: README.md
2022/: Notes.txt  Rooster.cpp  _Test.cpp  _data.cpp  _errors.cpp  _function.cpp  _main.cpp  _statements.cpp  data  data.cpp  exec_context.cpp  function  rooster  statements.cpp  test  test.cpp
2022/Cube/src/: CMakeLists.txt  Cube.cpp  main.cpp  puzzle.cpp
2022/Cube/src/Cube/: Cube.cpp  Cube.h  puzzle.cpp  test  test.cpp
2022/Cube/src/Cues/: Astor.h  CMakeLists.txt
2022/Cube/src/Puzzle/: CMakeLists.txt  puzzle.cpp
2023/: point_me  point_me.cpp
Cmaker/: CMakeCache.txt  Cmaker  Makefile  cmake_install.cmake
DisplayImage/: CMakeCache.txt  CMakeLists.txt  DisplayImage.cpp
GameDevPrep/: abstract  abstract_impl  count_vectors.cpp  defaulted_struct.cpp  inliner  lambda  lambda.cpp  main.cpp  mpoly  template_func  vincent.cpp
Nick/: base.cpp  creation_destruction.cpp  inliner.cpp  main
UserTypes/: access-control  switchit  switchit.cpp  union-variant  union-variant.cpp
_honing/: _algo.cpp  auto_.cpp
_pointers/: Gal.org  Swap  SwappThem.cpp
_variety/: ArcadeApp.cpp  Egungun  Egungun.cpp  _Operators.cpp  _arrayOfObjects  _arrayPointer  _classesClassroom.cpp  _parameterized_  _parameterized_.cpp  _passedByRef  _pointerClass  _pointerClass.cpp  _pointerEx2  _vectorClass.cpp  cemember  initializer_constructor.cpp  vectoria.cpp
arrays/: array_snip.cpp  arrays  arrays2  multid.cpp
basics/: basic_strings.cpp  passing_args.cpp
cmaker/: Cmaker  Makefile  cmake_install.cmake
containers/: ArrayExercise.cpp
cook/: _deleted_defaulted.cpp  lambda  (+6 more)
(+3338 files in other folders)
